--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,12 @@
 theme: jekyll-theme-cayman
 title: Dark Risings
 description: A fun and progressive redux designed by and for the players at large
+
+defaults:
+  -
+    scope:
+      path: "posts"
+      type: "pages"
+    values:
+      layout: "default"
+      comments: true
