--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
-title: Dark Risings
+title: Dark Risings (v2.0)
 description: A fun and progressive redux designed by and for the players at large
 
 defaults:
