--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,10 @@ defaults:
         values:
           layout: "default"
           comments: false
+      pipeline_pages:
+        scope:
+          path: "pipelines"
+          type: "pages"
+        values:
+          layout: "default"
+          comments: true
