--- a/_config.yml
+++ b/_config.yml
@@ -5,14 +5,12 @@ description: A fun and progressive redux designed by and for the players at larg
 defaults:
     post_pages:
         scope:
-          path: "posts"
-          type: "pages"
+          path: posts
         values:
-          layout: "default"
+          layout: default
           comments: true
     regular_pages:
         scope:
-          path: "pages"
-          type: "pages"
+          path: pages
         values:
           layout: "default"
